# elan

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  TOUR.md  docker-compose.yml  elan_central.db
config/: central.docker.toml  central.toml  coordinator.docker.toml  coordinator.example.toml  executor.docker.toml  executor.toml  query.docker.toml  query.toml
crates/elan-audit/: Cargo.toml
crates/elan-audit/src/: central.rs  event.rs  kafka.rs  lib.rs  sink.rs
crates/elan-central/: Cargo.toml
crates/elan-central/src/: config.rs  main.rs
crates/elan-central/src/db/: catalog_store.rs  iam_store.rs  mod.rs
crates/elan-central/src/grpc/: audit_svc.rs  catalog_svc.rs  coordinator_svc.rs  iam_svc.rs  mod.rs
crates/elan-central/src/http/: health.rs  mod.rs
crates/elan-common/: Cargo.toml  build.rs
crates/elan-common/src/: error.rs  lib.rs
crates/elan-common/src/proto/: mod.rs
crates/elan-common/src/types/: api.rs  catalog.rs  mod.rs
crates/elan-coordinator/: Cargo.toml
crates/elan-coordinator/src/: config.rs  dataset.rs  heartbeat.rs  main.rs  registration.rs  upload.rs
crates/elan-coordinator/src/http/: health.rs  mod.rs
crates/elan-executor/: Cargo.toml
crates/elan-executor/src/: auth.rs  config.rs  context.rs  main.rs  sql_service.rs
crates/elan-iam/: Cargo.toml
crates/elan-iam/src/: catalog_filter.rs  engine.rs  lib.rs  optimizer.rs  types.rs
crates/elan-query/: Cargo.toml
crates/elan-query/src/: config.rs  main.rs  session.rs
crates/elan-query/src/catalog/: mod.rs  provider.rs  table.rs
crates/elan-query/src/http/: health.rs  mod.rs  query.rs
crates/elan-query/src/planner/: mod.rs  remote_scan.rs
crates/elan-tui/: Cargo.toml
crates/elan-tui/src/: app.rs  main.rs
crates/elan-tui/src/client/: central.rs  mod.rs  query.rs
data/crm/: customers.csv
data/finance/: transactions.csv
migrations/: 0001_coordinators.sql  0002_datasets.sql  0003_iam.sql  0004_audit_local.sql  0005_iam_defaults.sql
nginx/: executor.conf
proto/: audit.proto  catalog.proto  coordinator.proto  iam.proto
proto/google/protobuf/: empty.proto  timestamp.proto
test/: 01-health.hurl  02-catalog.hurl  03-query-customers.hurl  04-query-transactions.hurl  05-query-joins.hurl  06-query-aggregations.hurl  07-auth.hurl  08-edge-cases.hurl  README.md
