[workspace]
resolver = "2"
members = [
    "crates/elan-common",
    "crates/elan-iam",
    "crates/elan-audit",
    "crates/elan-central",
    "crates/elan-coordinator",
    "crates/elan-executor",
    "crates/elan-query",
    "crates/elan-tui",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
rust-version = "1.86"

[workspace.dependencies]
# Internal crates
elan-common = { path = "crates/elan-common" }
elan-iam    = { path = "crates/elan-iam" }
elan-audit  = { path = "crates/elan-audit" }

# Async runtime
tokio        = { version = "1.43", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures      = "0.3"
async-trait  = "0.1"

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC — must use tonic 0.12 for elan-common proto gen (ballista-core uses 0.12 internally)
# For executor we use ballista-core's re-exported tonic
tonic       = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
prost       = "0.13"
prost-types = "0.13"

# HTTP
axum       = { version = "0.8", features = ["json", "macros"] }
tower      = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# DataFusion + Ballista — MUST remain in sync; ballista 53 requires datafusion 53
# datafusion 53.1.0 uses arrow 58
datafusion    = { version = "53", features = ["serde"] }
ballista      = "53"
ballista-core = "53"
arrow         = { version = "58", features = ["ipc"] }
arrow-schema  = "58"
arrow-array   = "58"
arrow-ipc     = "58"
arrow-cast    = "58"
datafusion-physical-plan = "53"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Kafka
rdkafka = { version = "0.36", features = ["sasl"] }

# Config loading (YAML/TOML/env)
config = "0.14"
toml   = "0.8"

# TUI
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["ratatui"] }

# Utilities
uuid              = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono            = { version = "0.4", features = ["serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest           = { version = "0.12", features = ["json"] }
bytes             = "1"

# Object storage — version must match what DataFusion 53 pulls in (0.13)
object_store      = { version = "0.13", features = ["aws"] }
url               = "2"
