[package]
name    = "elan-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
elan-common.workspace  = true
rdkafka.workspace      = true
tonic.workspace        = true
anyhow.workspace       = true
tokio.workspace        = true
async-trait.workspace  = true
serde.workspace        = true
serde_json.workspace   = true
chrono.workspace       = true
uuid.workspace         = true
tracing.workspace      = true
thiserror.workspace    = true
