[package]
name    = "elan-common"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
uuid.workspace       = true
chrono.workspace     = true
anyhow.workspace     = true
tonic.workspace      = true
prost.workspace      = true
prost-types.workspace = true
arrow-schema.workspace = true
arrow-array.workspace  = true
arrow-ipc.workspace    = true

[build-dependencies]
tonic-build.workspace = true
prost-build = "0.13"
