[package]
name    = "elan-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "elan-coordinator"
path = "src/main.rs"

[dependencies]
elan-common.workspace       = true
tonic.workspace             = true
prost.workspace             = true
prost-types.workspace       = true
axum.workspace              = true
tower.workspace             = true
tokio.workspace             = true
tokio-stream.workspace      = true
futures.workspace           = true
serde.workspace             = true
serde_json.workspace        = true
chrono.workspace            = true
uuid.workspace              = true
tracing.workspace           = true
tracing-subscriber.workspace = true
thiserror.workspace         = true
anyhow.workspace            = true
config.workspace            = true
toml.workspace              = true
arrow-schema.workspace      = true
arrow-ipc.workspace         = true
arrow-array.workspace       = true
datafusion.workspace        = true
async-stream = "0.3"
