[package]
name    = "elan-executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "elan-executor"
path = "src/main.rs"

[dependencies]
elan-common.workspace         = true
datafusion.workspace          = true
ballista.workspace            = true
ballista-core.workspace       = true
ballista-executor = "53"
ballista-scheduler = "53"
datafusion-proto = "53"
tokio-stream.workspace = true
axum.workspace = true
arrow-ipc.workspace         = true
bytes.workspace             = true
object_store.workspace      = true
url.workspace               = true
tokio.workspace             = true
serde.workspace             = true
serde_json.workspace        = true
tracing.workspace           = true
tracing-subscriber.workspace = true
anyhow.workspace            = true
config.workspace            = true
toml.workspace              = true
reqwest.workspace           = true
# Use tonic 0.14 to match ballista-core/ballista-executor (which use tonic 0.14 internally)
tonic = { version = "0.14", features = ["transport"] }
uuid.workspace              = true
