[package]
name    = "elan-iam"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
elan-common.workspace = true
datafusion.workspace  = true
arrow-schema.workspace = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
async-trait.workspace = true
tracing.workspace     = true
uuid.workspace        = true
tokio.workspace       = true
