[package]
name    = "elan-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "elan-query"
path = "src/main.rs"

[dependencies]
elan-common.workspace       = true
elan-iam.workspace          = true
elan-audit.workspace        = true
datafusion.workspace        = true
ballista.workspace          = true
ballista-core.workspace     = true
arrow.workspace             = true
arrow-schema.workspace      = true
arrow-array.workspace       = true
arrow-ipc.workspace         = true
arrow-cast.workspace              = true
datafusion-physical-plan.workspace = true
tonic.workspace             = true
axum.workspace              = true
tower.workspace             = true
tower-http.workspace        = true
tokio.workspace             = true
tokio-stream.workspace      = true
futures.workspace           = true
async-trait.workspace       = true
serde.workspace             = true
serde_json.workspace        = true
chrono.workspace            = true
uuid.workspace              = true
tracing.workspace           = true
tracing-subscriber.workspace = true
thiserror.workspace         = true
anyhow.workspace            = true
config.workspace            = true
reqwest.workspace           = true
