[package]
name    = "elan-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "elan-tui"
path = "src/main.rs"

[dependencies]
elan-common.workspace        = true
ratatui.workspace            = true
crossterm.workspace          = true
tui-textarea.workspace       = true
tokio.workspace              = true
tokio-stream.workspace       = true
futures.workspace            = true
reqwest.workspace            = true
tonic.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
chrono.workspace             = true
uuid.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
